# hw07-group28

./: .buildinfo  EDA.html  LICENSE  Makefile  README.html  README.md  _config.yml  _toc.yml  book-requirements.txt  conf.py  contribution_statement.html  contribution_statement.md  contributionstatement.md  environment.yml  genindex.html  hw07-description.html  hw07-description.md  main.html  main.ipynb  model.html  model.ipynb  objects.inv  search.html  searchindex.js  setup.cfg  todo.md
.doctrees/: EDA.doctree  README.doctree  contribution_statement.doctree  environment.pickle  model.doctree
.doctrees/.pytest_cache/: README.doctree
.github/workflows/: main.yml
.ipynb_checkpoints/: Makefile-checkpoint  contributionstatement-checkpoint.md  main-checkpoint.ipynb  model-checkpoint.ipynb  todo-checkpoint.md
.pytest_cache/: README.html
_build/html/: .buildinfo  EDA.html  README.html  contribution_statement.html  genindex.html  hw07-description.html  main.html  model.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: EDA.doctree  README.doctree  contribution_statement.doctree  environment.pickle  hw07-description.doctree  main.doctree
_build/html/_sources/: README.md  contribution_statement.md  model.ipynb
_build/jupyter_execute/: EDA.py  main.ipynb  main.py  model.ipynb  model.py
_sources/: README.md  contribution_statement.md  main.ipynb
tools/: functions.py
tools/test/: test_functions.py
