[metadata]
name             = Personal Key Indicators of Heart Disease Plots
version          = 0.2
author           = MUSHFIRAT MOHAIMIN and Wesley Cheung
author_email     = wesleycheung@berkeley.edu
description      = A Python library to plot Personal Key Indicators of Heart Disease figures
keywords         = tools, heart disease indicator
classifiers      =
	Programming Language :: Python :: 3.9
    Operating System :: OS Independent